[package]
name = "rss-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
discord-webhook = "0.1.0"
dotenv = "0.15.0"
html2md = "0.2.14"
reqwest = "0.11.13"
ron = "0.8.0"
rss = "2.0.1"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
