[package]
name = "rss-discord"
version = "0.2.8"
edition = "2021"
authors = ["Gobidev"]
description = "A simple rust program to scan rss feeds and send discord pings for new events"
repository = "https://github.com/Gobidev/rss-discord"
license = "MIT"
keywords = ["rss", "discord"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = { version = "0.4.23", default-features = false, features= ["clock"]}
discord-webhook = "0.1.0"
dotenvy = "0.15.6"
html2md = "0.2.14"
reqwest = "0.11.13"
ron = "0.8.0"
rss = "2.0.1"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
